--- a/src/app/components/models/modelos/modelos.component.html
+++ b/src/app/components/models/modelos/modelos.component.html
@@ -14,6 +14,7 @@
                 <thead style="color: #636363;">
                     <tr>
                         <th style="width: 20%; ">Linea</th>
+                        <th style="width: 20%; ">Marca</th>
                         <th style="width: 20%; ">Modelo</th>
                         <th style="width: 20%; ">Etiquetas</th>
                         <th style="width: 25%; ">Código SAP</th>
@@ -23,6 +24,7 @@
                 <tbody style="color: #767695;">
                     <tr *ngFor="let modelo of lstModelos">
                         <td>{{modelo.linea_nombre}}</td>
+                        <td>{{modelo.marca_nombre}}</td>
                         <td>{{modelo.modelo}}</td>
                         <td>{{modelo.etiquetas}}</td>
                         <td>{{modelo.cod_sap}}</td>
