--- a/src/app/components/income/pedidoprov/pedidoprov.component.html
+++ b/src/app/components/income/pedidoprov/pedidoprov.component.html
@@ -1,1 +1,57 @@
-<p>pedidoprov works!</p>
+<div style="width: 90%;margin: auto;">
+    <div class="card">
+        <div class="card-header">
+            <div class="row mx-3">
+                <fa-icon [icon]="faList" [size]="'3x'" style="color: #636363;"></fa-icon>
+                <h1 class="mx-5 " style="color: #636363;">PEDIDOS</h1>
+                <div style="position: absolute;right:0;" class="mx-3">
+                    <a class="btn btn-success" (click)="agregarModeloProducto()"
+                        style=" border-radius: 5px; 
+                            font-size: 12px; width:150px; 
+                            height:35px;
+                            margin-top: 25px;
+                            text-align:center; 
+                            ;"
+                    >NUEVO PEDIDO
+                    </a>
+                </div>
+            </div>
+            <div class="row mx-3">
+                            <a class="btn button" href="./navegation-cl/(contentClient:vistapedidos)"
+                                style="text-align:center;
+                                        font-size: 15px; width:140px; 
+                                           height:35px;
+                                           text-align:center; 
+                                           margin-top: 10px;
+                                           background: rgb(54,169,225,0.8);"
+                            ><span style="color: white;">
+                                Volver
+                            </span>
+                            
+                            </a>
+            </div>
+        </div>
+        <div class="card-body ">
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+                <thead style="color: #636363;">
+                    <tr>
+                        <th style="width: 20%; ">ESTADO</th>
+                        <th style="width: 20%; ">CÓDIGO</th>
+                        <th style="width: 20%; ">NOMBRE</th>
+                        <th style="width: 20%; ">DIRECCIÓN</th>
+                    </tr>
+                </thead>
+                <tbody style="color: #767695;">
+                    <tr *ngFor="let modeloProducto of lstModelosProductos">
+                        <td style="text-align: center;">
+                            <img src={{modeloProducto.url_image}} alt={{modeloProducto.marca}} class="img-thumbnail" height="100px" width="100px" data-toggle="modal" data-target="#exampleModal">
+                        </td>
+                        <td>{{modeloProducto.marca}}</td>
+                        <td>{{modeloProducto.color}}</td>
+                        <td>{{modeloProducto.atributo}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
