--- a/src/app/components/navegation-adm/navegation-adm.component.css
+++ b/src/app/components/navegation-adm/navegation-adm.component.css
@@ -31,3 +31,21 @@ img {
     margin: 0 auto;
     align-content: left;
 }
+
+.sidenav ::ng-deep .mat-drawer-content {
+    scrollbar-width: thin;
+    scrollbar-color: #2196F3 #FFFFFF;
+}
+
+.sidenav ::ng-deep ::-webkit-scrollbar {
+    width: 8px;
+}
+
+.sidenav ::ng-deep ::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.sidenav ::ng-deep ::-webkit-scrollbar-thumb {
+    background-color: #2196F3;
+    border-radius: 4px;
+}
