Creación de vistas

--- a/src/app/components/navegation-cl/navegation-cl.component.css
+++ b/src/app/components/navegation-cl/navegation-cl.component.css
@@ -49,3 +49,7 @@ img {
   background-color: #2196F3;
   border-radius: 4px;
 }
+
+.subitem-menu {
+  margin-left: 20px; /* Ajusta el valor según la separación deseada */
+}
