--- a/src/app/components/income/pedidoprov/pedidoprov.component.html
+++ b/src/app/components/income/pedidoprov/pedidoprov.component.html
@@ -5,7 +5,7 @@
                 <fa-icon [icon]="faList" [size]="'3x'" style="color: #636363;"></fa-icon>
                 <h1 class="mx-5 " style="color: #636363;">PEDIDOS</h1>
                 <div style="position: absolute;right:0;" class="mx-3">
-                    <a class="btn btn-success" (click)="agregarModeloProducto()"
+                    <a class="btn btn-success" (click)="openModal()"
                         style=" border-radius: 5px; 
                             font-size: 12px; width:150px; 
                             height:35px;
@@ -55,28 +55,3 @@
         </div>
     </div>
 </div>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-    Launch demo modal
-  </button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
