--- a/src/app/components/models-products/modeloproductos-edit/modeloproductos-edit.component.html
+++ b/src/app/components/models-products/modeloproductos-edit/modeloproductos-edit.component.html
@@ -156,6 +156,11 @@
                                 </small>
                             </div>
                             <div class="form-group">
+                                <label for="codigoFam">Código de Familia</label>
+                                <input type="text" class="form-control" id="codigoFam"
+                                    placeholder="Ingrese el código de la Familia" formControlName="codigoFam" />
+                            </div>
+                            <div class="form-group">
                                 <label for="codigoSAP">Código SAP</label>
                                 <input type="text" class="form-control" id="codigoSAP"
                                     placeholder="Ingrese el código SAP" formControlName="codigoSAP" />
