--- a/src/app/components/income/vistamarcas/vistamarcas.component.html
+++ b/src/app/components/income/vistamarcas/vistamarcas.component.html
@@ -1,14 +1,47 @@
-<!-- Ejemplo de uso del código -->
-<div *ngFor="let marca of lstMarcas">
-    <mat-card>
-      <mat-card-content>
-        <mat-card-title>
-          <span class="material-icons-outlined" style="font-size: 40px; color: #3163ad">{{ marca.url_image }}</span>
+<div style="width: 90%;margin: auto;">
+  <div class="card">
+      <br>
+      <div class="card-header">
+          <div class="row mx-3">
+              <fa-icon [icon]="faShoppingBag" [size]="'3x'" style="color: #636363;"></fa-icon>
+              <h1 class="mx-5 " style="color: #636363;">Marcas</h1>
+          </div>
+      </div>
+      <div class="card-body ">
+          <div>
+              <mat-grid-list cols="6" rowHeight="50px">
+                  <mat-grid-tile>
+                      <a class="btn button" href="./navegation-cl/(contentClient:pedidoprov)"
+                          style="text-align:center;
+                                  font-size: 15px; width:140px; 
+                                     height:35px;
+                                     text-align:center; 
+                                     margin-top: 10px;
+                                     background: rgb(54,169,225,0.8);"
+                      ><span style="color: white;">
+                          Volver
+                      </span>
+                      
+                      </a>
+                      </mat-grid-tile>
+              </mat-grid-list>
+          </div>
           <br><br>
-          <a href=# style="text-decoration: none;">
-            <p style="color: black; font-size: 30px; font-weight: normal;">{{ marca.marca }}</p>
-          </a>
-        </mat-card-title>
-      </mat-card-content>
-    </mat-card>
+  <mat-grid-list cols="3" rowHeight="225px">
+    <mat-grid-tile *ngFor="let marca of lstMarcas">
+      <mat-card class="dashboard-card">
+        <mat-card-header>
+            <mat-card-title>
+              <img src={{marca.url_image}} alt={{marca.marca}} class="img-thumbnail" height="100px" width="100px" data-toggle="modal" data-target="#exampleModal">
+              <br><br>
+              <a href=# style="text-decoration: none;">
+                <p style="color: black; font-size: 30px; font-weight: normal;">{{ marca.marca }}</p>
+              </a>
+            </mat-card-title>
+          </mat-card-header>
+        </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
   </div>
+    
+  
