--- a/src/app/components/categories/categorias/categorias.component.html
+++ b/src/app/components/categories/categorias/categorias.component.html
@@ -1,6 +1,5 @@
-
 <br>
-<div class="container">
+<div class="container" style="max-width: 100%;margin: auto;">
     <div class="card">
         <div class="card-header">
             <div class="row mx-3">
