--- a/src/app/components/marks/marcas/marcas.component.css
+++ b/src/app/components/marks/marcas/marcas.component.css
@@ -12,3 +12,7 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance: textfield;
 }
+
+.card-body {
+    overflow-x: auto
+}
