--- a/src/app/components/models-products/modeloproductos/modeloproductos.component.html
+++ b/src/app/components/models-products/modeloproductos/modeloproductos.component.html
@@ -1,4 +1,4 @@
-<div style="width: 100%;margin: auto;">
+<div style="max-width: 100%;margin: auto;">
     <div class="card">
         <div class="card-header">
             <div class="row mx-3">
