--- a/src/app/components/groups/grupos/grupos.component.html
+++ b/src/app/components/groups/grupos/grupos.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="max-width: 95%;margin: auto;">
     <div class="card">
         <div class="card-header">
             <div class="row mx-3">
