--- a/src/app/components/income/vistamarcas/vistamarcas.component.css
+++ b/src/app/components/income/vistamarcas/vistamarcas.component.css
@@ -8,7 +8,7 @@
     left: 10px;
     right: 10px;
     bottom: 5px;
-    width: 100%;
+    width: 90%;
     margin-bottom: 15px;
     box-shadow: 0 1px 15px 0px rgb(0 0 0 / 10%);
     padding-bottom: 15px;
@@ -21,7 +21,7 @@
     left: 10px;
     right: 10px;
     bottom: 5px;
-    width: 100%;
+    width: 90%;
     margin-bottom: 15px;
     box-shadow: 0 1px 15px 0px rgb(0 0 0 / 10%);
     padding-bottom: 15px;
@@ -38,7 +38,7 @@
     font-family: "Poppins", sans-serif;
     font-size: 0.875rem;
     line-height: 1.5;
-    text-align: left;
+    text-align: center;
     padding: 0 15px;
     color: #4c63b5;
   }
@@ -47,7 +47,7 @@
     font-family: "Poppins", sans-serif;
     font-size: 0.875rem;
     line-height: 1.5;
-    text-align: left;
+    text-align: center;
     padding: 0 15px;
     color: #50abe1;
   }
