--- a/src/app/components/warehouses/almacenes/almacenes.component.html
+++ b/src/app/components/warehouses/almacenes/almacenes.component.html
@@ -1,4 +1,4 @@
-<div style="width: 90%;margin: auto;">
+<div style="max-width: 95%;margin: auto;">
     <div class="card">
         <br>
         <div class="card-header">
@@ -10,7 +10,7 @@
                 </div>
             </div>
         </div>
-        <div class="card-body ">
+        <div class="card-body">
             <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
                 <thead style="color: #636363;">
                     <tr>
