--- a/src/app/components/income/vistamarcas/vistamarcas.component.css
+++ b/src/app/components/income/vistamarcas/vistamarcas.component.css
@@ -1,83 +1,17 @@
-.grid-container {
-    margin: 25px;
-  }
-  
-  .dashboard-card {
-    position: relative;
-    top: 1px;
-    left: 10px;
-    right: 10px;
-    bottom: 5px;
-    width: 90%;
-    margin-bottom: 15px;
-    box-shadow: 0 1px 15px 0px rgb(0 0 0 / 10%);
-    padding-bottom: 15px;
-    background: #fff;
-  }
-  
-  .dashboard-card:hover {
-    position: relative;
-    top: 1px;
-    left: 10px;
-    right: 10px;
-    bottom: 5px;
-    width: 90%;
-    margin-bottom: 15px;
-    box-shadow: 0 1px 15px 0px rgb(0 0 0 / 10%);
-    padding-bottom: 15px;
-    background: #dadada;
-  }
-  
-  .more-button {
-    position: absolute;
-    top: 5px;
-    right: 10px;
-  }
-  
-  .dashboard-card-content {
-    font-family: "Poppins", sans-serif;
-    font-size: 0.875rem;
-    line-height: 1.5;
-    text-align: center;
-    padding: 0 15px;
-    color: #4c63b5;
-  }
-  
-  .dashboard-card:hover>.dashboard-card-content {
-    font-family: "Poppins", sans-serif;
-    font-size: 0.875rem;
-    line-height: 1.5;
-    text-align: center;
-    padding: 0 15px;
-    color: #50abe1;
-  }
-  
-  h1 {
-    line-height: 1.05;
-    display: block;
-    font-size: 2em;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    font-family: inherit;
-  }
-  
-  h5 {
-    line-height: 1.05;
-    display: block;
-    font-size: 1.8em;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-family: inherit;
-  }
-  
-  .circular--square {
-    border-top-left-radius: 50% 50%;
-    border-top-right-radius: 50% 50%;
-    border-bottom-right-radius: 50% 50%;
-    border-bottom-left-radius: 50% 50%;
-  }
+.dashboard-card {
+  text-align: center;
+  background-color: #ffffff;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.card-image {
+  height: 120px;
+  width: 125px;
+  margin-bottom: 10px;
+}
+
+.card-title {
+  color: rgb(48, 166, 170);
+  font-size: 16px;
+}
