--- a/src/app/components/income/vistamarcas/vistamarcas.component.html
+++ b/src/app/components/income/vistamarcas/vistamarcas.component.html
@@ -4,7 +4,7 @@
       <div class="card-header">
           <div class="row mx-3">
               <fa-icon [icon]="faShoppingBag" [size]="'3x'" style="color: #636363;"></fa-icon>
-              <h1 class="mx-5 " style="color: #636363;">Marcas</h1>
+              <h1 class="mx-5 " style="color: #636363;">Seleccione una marca</h1>
           </div>
       </div>
       <div class="card-body">
@@ -27,14 +27,14 @@
               </mat-grid-list>
           </div>
           <br><br>
-  <mat-grid-list cols="2" rowHeight="225px">
+  <mat-grid-list cols="4" rowHeight="300px">
     <mat-grid-tile *ngFor="let marca of lstMarcas">
       <mat-card class="dashboard-card">
         <mat-card-header>
             <mat-card-title>
-              <img src={{marca.url_image}} alt={{marca.marca}} class="img-thumbnail" height="75px" width="75px" data-toggle="modal" data-target="#exampleModal">
+              <img src={{marca.url_image}} alt={{marca.marca}} class="img-thumbnail" height="120px" width="125px" data-toggle="modal" data-target="#exampleModal">
               <br><br>
-              <a href=# style="text-decoration: none;">
+              <a href='#' (click)="verPortafolio($event, marca)" style="text-decoration: none;">
                 <p style="color: black; font-size: 30px; font-weight: normal;">{{ marca.marca }}</p>
               </a>
             </mat-card-title>
