--- a/src/app/components/income/pedidoprov/pedidoprov.component.html
+++ b/src/app/components/income/pedidoprov/pedidoprov.component.html
@@ -1,4 +1,4 @@
-<div style="width: 90%;margin: auto;">
+<div style="max-width: 95%;margin: auto;">
     <div class="card">
         <div class="card-header">
             <div class="row mx-3">
