--- a/src/app/components/income/portafolios/portafolios.component.html
+++ b/src/app/components/income/portafolios/portafolios.component.html
@@ -1,10 +1,10 @@
-<div style="width: 90%; margin: auto">
+<div style="width: 95%; margin: auto">
     <div class="card">
         <br />
         <div class="card-header">
             <div class="row mx-3">
                 <fa-icon [icon]="faShoppingBag" [size]="'3x'" style="color: #636363"></fa-icon>
-                <h1 class="mx-5" style="color: #636363">Portafolios</h1>
+                <h1 class="mx-5" style="color: #636363">Portafolios de los Productos</h1>
             </div>
         </div>
         <div class="card-body">
@@ -30,7 +30,7 @@
                 <input type="text" [(ngModel)]="searchText" placeholder="Buscar" style="margin-bottom: 10px;" class="search-input">
               </div>
 
-            <mat-grid-list cols="4" rowHeight="300px">
+            <mat-grid-list cols="4" rowHeight="375px">
                 <mat-grid-tile *ngFor="let modeloproducto of filteredModeloProductos">
                     <mat-card class="dashboard-card">
                         <mat-card-header>
@@ -52,7 +52,7 @@
                             <p style="color: black; font-size: 12px; font-weight: normal">
                                 {{ modeloproducto.modelo_producto }}
                             </p>
-                            <button type="button" style="height: 30px; width: 100px; font-size: 10px"
+                            <button type="button" (click)="comprar(modeloproducto)" style="height: 30px; width: 100px; font-size: 10px"
                                 class="btn btn-primary">
                                 COMPRAR
                             </button>
