--- a/src/app/components/income/portafolios/portafolios.component.css
+++ b/src/app/components/income/portafolios/portafolios.component.css
@@ -22,6 +22,7 @@
   height: 100px;
   width: 100px;
   margin-bottom: 10px;
+  object-fit: contain; /* Ajusta la imagen dentro del espacio disponible sin distorsionarla */
 }
 
 .card-content {
