--- a/src/app/components/income/portafolios-comprar/portafolios-comprar.component.html
+++ b/src/app/components/income/portafolios-comprar/portafolios-comprar.component.html
@@ -34,7 +34,7 @@
                 </thead>
                 <tbody>
                   <tr *ngFor="let fila of lstModeloProductos">
-                    <th>{{ fila.id }}</th>
+                    <th>{{ fila.color }}</th>
                     
                   </tr>
                 </tbody>
