--- a/src/app/components/income/vistamarcas/vistamarcas.component.css
+++ b/src/app/components/income/vistamarcas/vistamarcas.component.css
@@ -1,17 +1,29 @@
 .dashboard-card {
+  height: 200px; /* Establece una altura fija para las tarjetas */
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px;
+  padding: 10px;
   text-align: center;
   background-color: #ffffff;
   border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .card-image {
-  height: 120px;
-  width: 125px;
+  height: 100px;
+  width: 100px;
   margin-bottom: 10px;
+  object-fit: contain;
 }
 
-.card-title {
-  color: rgb(48, 166, 170);
-  font-size: 16px;
+.content-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
 }
