--- a/src/app/components/income/portafolios-comprar/portafolios-comprar.component.html
+++ b/src/app/components/income/portafolios-comprar/portafolios-comprar.component.html
@@ -1,4 +1,4 @@
-<div style="width: 95%; margin: auto">
+<div style="max-width: 95%; margin: auto">
   <div class="card">
     <br />
     <div class="card-header">
@@ -24,8 +24,39 @@
           </mat-grid-tile>
         </mat-grid-list>
       </div>
+      <table style="width: 90%">
+        <tr>
+          <td style="width: 5%"></td>
+          <td style="width: 30%; text-align: center">
+            <div class="image-container">
+              <img src="{{ imagen }}" alt="{{ imagen}}"
+              class="card-image" height="150px" width="150px" data-toggle="modal"
+              data-target="#exampleModal" />
+          </div> 
+          </td>
+        </tr>
+        <br>
+        <tr>
+          <td style="width: 5%"></td>
+          <td style="width: 30%; text-align: center">
+            <label for="producto">Producto</label>
+            <input type="text" [ngModel]="producto" style="text-align: center" class="form-control " id="producto" readonly placeholder="Línea"
+              >
+          </td>
+        </tr>
+        <br>
+        <tr>
+          <td style="width: 5%"></td>
+          <td style="width: 30%; text-align: center">
+            <label for="producto">Descripción</label>
+            <input type="text" [ngModel]="desc" style="text-align: center" class="form-control " id="desc" readonly placeholder="Línea"
+              >
+          </td>
+        </tr>
+      </table>
+      <br>
       <br /><br />
-      <table>
+      <table class="cool-table">
         <thead>
           <tr>
             <th></th>
@@ -33,14 +64,20 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let fila of lstProductos">
+          <tr *ngFor="let fila of lstProductos; let i = index">
             <th>{{ fila.tamanio }}</th>
-            <td *ngFor="let columna of lstModeloProductos">
-              <input type="text" [readonly]="!isCeldaEditable(columna.color_id,fila.tamanio)">
+            <td *ngFor="let columna of lstModeloProductos; let j = index">
+              <input type="text" [readonly]="!isCeldaEditable(columna.color_id,fila.tamanio, columna.cod_familia)" (input)="onInput($event)" class="cool-input" [ngClass]="{'uneditable-cell': !isCeldaEditable(columna.color_id,fila.tamanio,columna.cod_familia)}">
+              {{ matrizIds[i][j] }}
             </td>
           </tr>
         </tbody>
       </table>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     </div>
   </div>
 </div>
