--- a/src/app/components/income/portafolios-comprar/portafolios-comprar.component.css
+++ b/src/app/components/income/portafolios-comprar/portafolios-comprar.component.css
@@ -10,13 +10,60 @@
   }
   
   .cool-input {
-    width: 50px; /* Ajusta el tamaño de los inputs según tus necesidades */
+    width: 100px; /* Ajusta el tamaño de los inputs según tus necesidades */
   }
 
-  .uneditable-cell {
-    background-color: #b9b7b7; /* Cambia el color de fondo según tus preferencias */
+  .celda-plomo {
+    background-color: #ccc;
   }
 
   .card-body {
     overflow-x: auto
+}
+
+.cool-image {
+  max-width: 100%;
+  max-height: 150px;
+  border-radius: 50%;
+  border: 0.1px solid #ccc; /* Color y grosor del borde */
+  transition: transform 0.3s ease-in-out;
+}
+
+.cool-image:hover {
+  transform: scale(2.3);
+}
+
+.image-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  height: 300px;
+}
+
+.icon-container {
+  position: relative;
+}
+
+.icono-input {
+  position: absolute;
+  top: 0;
+  right: 250px;
+}
+
+.label-input {
+  position: absolute;
+  top: 10px;
+  right: 170px;
+  font-size: 20px;
+}
+
+.resultado-input {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 150px;
+  height: 35px;
+  text-align: center;
+  /* Estilos adicionales para el input del resultado */
 }
