--- a/src/app/components/inventories/inventarios/inventarios.component.html
+++ b/src/app/components/inventories/inventarios/inventarios.component.html
@@ -38,6 +38,7 @@
                         <th style="width: 10%; ">ETIQUETAS</th>
                         <th style="width: 5%; ">FAV</th>
                         <th style="width: 8%; ">OPTIMO</th>
+                        <th style="width: 8%; ">PRECIO</th>
                         <th style="width: 8%; ">STOCK</th>
                         <th style="width: 20%; "></th>
                     </tr>
@@ -51,6 +52,7 @@
                         <td>{{inventario.etiquetas}}</td>
                         <td></td>
                         <td>{{inventario.stock_optimo}}</td>
+                        <td>{{inventario.pvp2}}</td>
                         <td>{{inventario.stock}}</td>
 
                         <td>
