--- a/src/app/components/income/portafolios-comprar/portafolios-comprar.component.html
+++ b/src/app/components/income/portafolios-comprar/portafolios-comprar.component.html
@@ -25,7 +25,7 @@
         </mat-grid-list>
         <div class="icon-container">
           <fa-icon [icon]="faMoneyBillAlt" [size]="'3x'" style="color: #6aaf42" class="icono-input"></fa-icon>
-          <label for="total" class="label-input">TOTAL:</label>
+          <label for="total" class="label-input">VALOR:</label>
           <input type="text" readonly [(ngModel)]="resultado" class="cool-input resultado-input" id="resultado-input">
         </div></div>
       <table style="width: 90%">
@@ -33,7 +33,7 @@
           <td style="width: 5%"></td>
           <td style="width: 30%; text-align: center">
             <div class="image-container">
-              <img src="{{ imagen }}" alt="{{ imagen}}" class="cool-image" height="150px" width="150px"
+              <img [src]="imagenSeleccionada || imagen" alt="{{ imagen}}" class="cool-image" height="150px" width="150px"
                 data-toggle="modal" data-target="#exampleModal" />
             </div>
           </td>
@@ -69,7 +69,7 @@
         <tbody>
           <tr *ngFor="let fila of lstProductos; let i = index">
             <th>{{ fila.tamanio }}</th>
-            <td *ngFor="let columna of lstModeloProductos; let j = index">
+            <td *ngFor="let columna of lstModeloProductos; let j = index" (click)="cambiarImagen(matrizIds[i][j].url)">
               <input type="text" [readonly]="isCellEmpty(i, j)" (input)="onInput($event)" class="cool-input"
                 [class.celda-plomo]="isCellEmpty(i, j)" [id]="'input-' + i + '-' + j">
               <!--
