--- a/src/app/components/income/portafolios-comprar/portafolios-comprar.component.css
+++ b/src/app/components/income/portafolios-comprar/portafolios-comprar.component.css
@@ -17,7 +17,7 @@
     background-color: #ccc;
   }
 
-  .card-body {
+  .card-body2 {
     overflow-x: auto
 }
 
@@ -66,4 +66,21 @@
   height: 35px;
   text-align: center;
   /* Estilos adicionales para el input del resultado */
+}
+
+
+.button-container {
+  margin-top: 20px;
+  text-align: center;
+}
+
+/* Estilos para el botón */
+.btn.button {
+  background-color: rgb(54, 169, 225, 0.8);
+  color: white;
+  width: 140px;
+  height: 35px;
+  font-size: 15px;
+  border: none;
+  outline: none;
 }
