--- a/src/app/components/income/portafolios-comprar/portafolios-comprar.component.html
+++ b/src/app/components/income/portafolios-comprar/portafolios-comprar.component.html
@@ -88,7 +88,7 @@
       <br>
       <div class="button-container">
         <button class="btn button" (click)="obtenerDetalleProductos()">
-          <span style="color: white"> Obtener detalle </span>
+          <span style="color: white"> Guardar pedido </span>
         </button>
       </div>
     </div>
